--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,249 @@
 body {
-    background-color: skyblue;
+    background-color: rgb(255, 255, 255);
+    min-height: 100%;
+    position: relative;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Itim', cursive;
+}
+
+html {
+    height: 100%;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+
+#navbar {
+    background-color: #E7D1D1;
+    top: 0;
+}
+
+#footer {
+    background-color: #E7D1D1;
+    min-height: 70px;
+    position: absolute;
+    width: 100%;
+}
+
+#concept {
+    background-image: url(/assets/images/fond.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: -1.5rem;
+
+}
+
+#conceptExplain {
+    background-color: #E7D1D1;
+}
+
+#concept li {
+    margin-left: 1.5rem;
+}
+
+#NosBoxs,
+#NosParte {
+    background-color: #E7D1D1;
+    margin-bottom: 6rem;
+    font-weight: bold;
+    font-size: xx-large;
+}
+
+#concept h1 {
+    font-family: 'Italianno', cursive;
+    font-size: 150px;
+}
+
+#parte p {
+    margin: 0 5rem 0 5rem;
+}
+
+
+.rounded-custom {
+    border-radius: 15px;
+}
+
+.account-item {
+    background-color: white;
+    padding: 70px;
+    margin-bottom: 5rem;
+}
+
+.account-item a {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+
+.container1 {
+    position: relative;
+    width: 700px;
+    height: 520px;
+    background: #7e7e7e;
+    box-shadow: 0 30px 50px #dbdbdb;
+
+}
+
+.container1 .slide .item {
+    width: 165px;
+    height: 250px;
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    border-radius: 20px;
+    box-shadow: 0 30px 50px #292828;
+    background-position: 50% 50%;
+    background-size: cover;
+    display: inline-block;
+    transition: 0.5s;
+
+}
+
+.slide .item:nth-child(1),
+.slide .item:nth-child(2) {
+    top: 0;
+    left: 0;
+    transform: translate(0, 0);
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.slide .item:nth-child(3) {
+    left: 50%;
+}
+
+.slide .item:nth-child(4) {
+    left: calc(50% + 210px);
+}
+
+.slide .item:nth-child(5) {
+    left: calc(50% + 430px);
+}
+
+.slide .item:nth-child(n + 6) {
+    left: calc(50% + 650px);
+    opacity: 0;
+}
+
+.item .content {
+    position: absolute;
+    top: 50%;
+    left: 100px;
+    width: 250px;
+    text-align: left;
+    color: #000000;
+    transform: translate(0, -50%);
+    font-family: system-ui, sans-serif;
+    display: none;
+    padding-right: 60px;
+    font-weight: bold;
+
+
+}
+
+.slide .item:nth-child(2) .content {
+    display: block;
+}
+
+.content .name {
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+    opacity: 0;
+    color: #000;
+    animation: animate 1s ease-in-out 1 forwards;
+}
+
+.content .des {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.3s 1 forwards;
+    background: #fffdfde3;
+    padding: 0.8rem;
+    border-radius: 5%;
+
+}
+
+.content button {
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.6s 1 forwards;
+
+}
+
+@keyframes animate {
+    from {
+        opacity: 0;
+        transform: translate(0, 100px);
+        filter: blur(33px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0);
+        filter: blur(0);
+    }
+}
+
+.button {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+}
+
+.button button {
+    width: 40px;
+    height: 35px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    margin: 0 5px;
+    border: 1px solid #000;
+
+}
+
+.button button:hover {
+    background: #ababab;
+    color: #fff;
+
+}
+
+
+/* {# fin test css de carouselles de boxs #} */
+
+
+/* mediaquerry pour que le carouselle disparaise au profit des bulles de boxs sur petits ecrans */
+@media only screen and (min-width: 1200px) {
+    #fullDisplay {
+        display: block;
+        /* Afficher la div sur les grands écrans */
+    }
+
+    #phoneDisplay {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    #fullDisplay {
+        display: none;
+    }
+
+    #phoneDisplay {
+        display: block;
+        /* Afficher la div lorsque la largeur de l'écran est inférieure à 1200px */
+    }
 }
