--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -38,7 +38,7 @@
                             <div class="content">
                                 <div class="name">{{Box.nom}}</div>
                                 <div class="des">{{Box.description}}</div>
-                                <a href="}" class="btn btn-primary mb-3">Personnaliser cette Box</a>
+                                <a href="{{ path('app_ma_box', {'slug' : Box.slug})}}" class="btn btn-primary mb-3">Personnaliser cette Box</a>
                             </div>
                         </div>
                     {% endfor %}
@@ -57,7 +57,7 @@
                         <img class='img-fluid mb-4 rounded-circle' src="assets/images/{{Box.illustration}}" alt="illustration" width="100px"><br>
                         <h4>{{Box.nom}}</h4>
                         <p>{{Box.description}}</p>
-                        <a href="" class="btn btn-primary mb-3">Personnaliser cette Box</a>
+                        <a href="{{ path('app_ma_box', {'slug' : Box.slug})}}" class="btn btn-primary mb-3">Personnaliser cette Box</a>
                     </div>
                 {% endfor %}
             </div>
