--- a/templates/includes/header.html.twig
+++ b/templates/includes/header.html.twig
@@ -1,30 +1,54 @@
-
 <!-- ======= Header ======= -->
 
 <nav class="container-fluid" id="navbar">
-	<div class="row justify-content-center text-center ">
-		<div>
-			<a href="{{ path("app_accueil") }}"><img id='logonav' src="{{asset('assets/images/logo.svg')}}" alt="Logo" width="150px"></a>
-		</div>
-	</div>
-	<div class="row justify-content-between text-center pb-3">
-		<div class="col-md-3 ">
-			<a href="{{path('app_boxs')}}"><h3>Nos Box's</h3></a>
-		</div>
-		<div class="col-md-3 ">
-			<a href="{{ path("app_partenaires") }}"><h3>Nos Partenaires</h3></a>
-		</div>
-		<div class="col-md-3 ">
-			<a href=""><h3>Une Question ?</h3></a>
-		</div>
-		<div class="col-md-3 ">
-		{% if app.user %}
-			<a href="{{path('app_compte')}}"><h3>Mon compte</h3></a>
-			<a href="{{path('app_logout')}}"><h5>Se déconnecter</h5></a>
-				{% else %}
-					<a href="{{ path("app_connexion") }}"><h3>Se Connecter</h3></a> 
+	<div class="row justify-content-center text-center align-items-center">
+	<div class="col-md-2"></div>
+    <div class="col-md-8 "> 
+        <a href="{{ path("app_accueil") }}"><img id='logonav' src="{{asset('assets/images/logo.svg')}}" alt="Logo" width="150px"></a>
+    </div>
+    <div class="col-md-2 " > 
+	{% if app.user %}
+        <a href="{{path('app_cart')}}">Mon Panier
+            <img src="{{asset('assets/images/ajouter-un-panier.png')}}" width="20px" alt="panier">
+        </a>
 		{% endif %}
-			
+    </div>
+</div>
+	<div class="row justify-content-between text-center pb-3">
+		<div class="col-md-2 ">
+			<a href="{{path('app_boxs')}}">
+				<h3>Nos Box's</h3>
+			</a>
+		</div>
+		<div class="col-md-2 ">
+			<a href="{{ path("app_partenaires") }}">
+				<h3>Nos Partenaires</h3>
+			</a>
+		</div>
+		<div class="col-md-2 ">
+			<a href="{{ path("app_contact") }}">
+				<h3>Une Question ?</h3>
+			</a>
+		</div>
+		<div class="col-md-2 ">
+			{% if app.user %}
+				<a href="{{path('app_compte')}}">
+					<h3>Mon compte</h3>
+				</a>
+
+				<a href="{{path('app_logout')}}">
+					<h5>Se déconnecter</h5>
+				</a>
+			{% else %}
+				<a href="{{ path("app_connexion") }}">
+					<h3>Se Connecter</h3>
+				</a>
+			{% endif %}
+			{# <div class="col-md-2">
+					<a href="{{path('app_compte')}}"><h3>Mon Panier</h3>
+					<img src="{{asset('assets/images/ajouter-un-panier.png')}}" width="20px" alt="panier"></a>
+					</div> #}
+
 		</div>
 	</div>
 </nav>
