--- a/templates/nos_boxs/afficher.html.twig
+++ b/templates/nos_boxs/afficher.html.twig
@@ -1,36 +1,60 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}afficher mon produit!{% endblock %}
+{% block title %}Afficher mon produit!
+{% endblock %}
 
 {% block body %}
-<div id="concept" class="container-fluid p-3 text-center">
+	<div id="concept" class="container-fluid p-3 text-center">
 		<div class="row text-center pt-5">
-			<h1>{{Box.nom}}</h1>
+			<h1>{{ Box.nom }}</h1>
 		</div>
 		<div class="rounded-custom bg-light bg-opacity-75 col-md-10 row mx-auto p-4 m-4">
 			<div class="col-md-5 mx-auto">
-				<img class='img-fluid m-4' src="/assets/images/{{Box.illustration}}" alt="Photo de {{Box.nom}}" width="200px">
+				<img class='img-fluid m-4' src="/assets/images/{{ Box.illustration }}" alt="Photo de {{ Box.nom }}" width="200px">
 				<br>
-				<p>{{Box.description}}</p>
+				<p>{{ Box.description }}</p>
 			</div>
 
 			<div class="col-md-5  mx-auto">
-				
-
-				<h4 class="mt-3">Cette Box est d'office composée de :</h4>
-				<div id="quantitee" class="col-md-4 mx-auto text-start ">
-					{% for ingredient in ingredients %}
-						<div>{{ ingredient.ingredient }}
-							x 1
-						</div>
-					{% endfor %}
+				<h3 class="mt-3">Cette Box est d'office composée de :</h3>
+				<div id="quantitee" class="col-md-8 mx-auto text-start ">
+					<div class="row">
+						{% for ingredient in ingredients %}
+							<div class="col-md-6 mb-3 ">
+								<small>{{ ingredient.ingredient }}</small>
+							</div>
+							{% if loop.index % 2 == 0 %}
+							</div>
+							<div class="row">
+							{% endif %}
+						{% endfor %}
+					</div>
 				</div>
 				<br>
-				{# <h4 class="mt-3">Vos gourmandises supplémentaires* :</h4>
-				<p id="add"></p> #}
-				<a href="{{path("app_add_to_cart", {'id': Box.id}) }}" class="btn btn-success">Ajouer cette formule au panier</a>
+				{# <a href="{{ path("app_add_to_cart", {'idbox': Box.id}) }}" class="btn btn-success">Ajouter cette formule au panier</a> #}
 			</div>
-			
 		</div>
-</div>
+
+		<div class="rounded-custom bg-light bg-opacity-75 col-md-10 row mx-auto p-4 m-4">
+			<div class="col-md-10  mx-auto">
+				<h4 class="mt-3">Ajoutez GRATUITEMENT 4 ingredients pour personaliser
+					{{ Box.nom }}</h4>
+
+				{{ form_start(form) }}
+				<div class="row">
+					<div class="col-md-6">
+						{{ form_row(form.ingredient1) }}
+						{{ form_row(form.ingredient2) }}
+						<!-- Ajoutez les autres champs de la première colonne ici -->
+					</div>
+					<div class="col-md-6">
+						{{ form_row(form.ingredient3) }}
+						{{ form_row(form.ingredient4) }}
+						<!-- Ajoutez les autres champs de la deuxième colonne ici -->
+					</div>
+				</div>
+				{{ form_end(form) }}
+			</div>
+		</div>
+	</div>
 {% endblock %}
