--- a/templates/includes/header.html.twig
+++ b/templates/includes/header.html.twig
@@ -1,3 +1,5 @@
+
+
 <!-- ======= Header ======= -->
 
 <nav class="container-fluid" id="navbar">
@@ -9,7 +11,11 @@
     <div class="col-md-2 " > 
 	{% if app.user %}
         <a href="{{path('app_cart')}}">Mon Panier
-            <img src="{{asset('assets/images/ajouter-un-panier.png')}}" width="20px" alt="panier">
+            <img src="{{asset('assets/images/ajouter-un-panier.png')}}" width="20px" alt="panier"> 
+			
+			{# | {{ NbArticlesPanier }} 
+			 #}
+			
         </a>
 		{% endif %}
     </div>
