--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,7 +9,12 @@ body {
     padding: 0;
     font-family: 'Itim', cursive;
 }
+/* mise en forme des bulles de page accueil */
+.info-bubble {
+    display: none;
+}
 
+/* mise en forme des bulles de page accueil */
 html {
     height: 100%;
 }
@@ -247,3 +252,40 @@ a {
         /* Afficher la div lorsque la largeur de l'écran est inférieure à 1200px */
     }
 }
+
+#togglePassword{
+    border: none;
+}
+
+.info-bubbles {
+    position: relative;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.info-bubble {
+    background-color: #f0f0f0;
+    padding: 10px;
+    border-radius: 10px;
+    width: 200px;
+    height: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px; /* Ajout de marge en bas */
+}
+
+.info-bubble:nth-child(odd) {
+    float: left;
+    clear: left;
+    margin-right: 10px; /* Espacement entre les bulles */
+}
+
+.info-bubble:nth-child(even) {
+    float: right;
+    clear: right;
+    margin-left: 10px; /* Espacement entre les bulles */
+}
+
+
+
+
