--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,7 +31,7 @@
                 <div class="input-group">
                     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
                     <div class="input-group-append">
-                        <button type="button" class="btn btn-outline-secondary" id="togglePassword">
+                        <button type="button" class="btn btn-outline-secondary" id="mot-de-passe">
                             <i class="fas fa-eye"></i>
                         </button>
                     </div>
@@ -54,14 +54,14 @@
     </div>
 	 <script>
 
-	 let passwordField = document.getElementById('inputPassword');
-     let fieldType = passwordField.getAttribute('type');
+	 let champmdp = document.getElementById('inputPassword');
+     let fieldType = champmdp.getAttribute('type');
 
-        document.getElementById('togglePassword').addEventListener('mouseover', function() {
-            passwordField.setAttribute('type', 'text');
+        document.getElementById('mot-de-passe').addEventListener('mouseover', function() {
+            champmdp.setAttribute('type', 'text');
              });
-		document.getElementById('togglePassword').addEventListener('mouseout', function() {
-            passwordField.setAttribute('type', 'password');
+		document.getElementById('mot-de-passe').addEventListener('mouseout', function() {
+            champmdp.setAttribute('type', 'password');
              });
 
          
